--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -49,8 +49,7 @@
         </md-content>
 
       <div class='screenshots' flex="50" flex-sm="100">
-         <!-- we need to implement a lightbox here -->
-         <md-card class='screenshot' ng-repeat="screenshot in plugin.screenshots"><img ng-src="{{screenshot.url}}"></md-card>
+         <ng-gallery images="screenshots"></ng-gallery>
       </div>
     </div>
     <div layout="row">
