--- a/frontend/app/styles/_plugin_list.sass
+++ b/frontend/app/styles/_plugin_list.sass
@@ -7,6 +7,8 @@
 .result
     margin: 0
     padding: 10px
+    &:hover
+        background-color: darken(#fff, 8%)
 
 .result:nth-child(even)
     background-color: $verylightgrey
