--- a/frontend/app/styles/_plugin.sass
+++ b/frontend/app/styles/_plugin.sass
@@ -21,16 +21,18 @@
     .download
         i
             line-height: 58px
-    .screenshots
+    .ng-gallery
         margin: 40px 0 0 10px
         max-width: 440px
-        .screenshot
+        .ng-thumb
             width: 200px
             height: 150px
             margin: 10px
             display: inline-block
             text-align: center
-            cursor: pointer
+    .ng-thumbnails-wrapper
+        .ng-thumbnails
+            width: 4000px !important
 
 @media (max-width: 599px)
     .plugin
