improve xml example

--- a/frontend/app/views/submit.html
+++ b/frontend/app/views/submit.html
@@ -33,11 +33,12 @@
    <logo>http://link/to/logo</logo>
    <description>
       <short>
-         <lang>short description of the plugin, displayed on list, text only</lang>
-         ...
+         <en>short description of the plugin, displayed on list, text only</en>
+         <lang>...</lang>
       </short>
       <long>
-         <lang>short description of the plugin, displayed on detail, Markdown accepted</lang>
+         <en>short description of the plugin, displayed on detail, Markdown accepted</en>
+         <lang>...</lang>
       </long>
    </description>
    <homepage>http://link/to/your/page</homepage>
@@ -49,23 +50,22 @@
    </authors>
    <versions>
       <version>
-         <num>1.8.0</num>
-         <compatibility>0.85</compatibility>
+         <num>1.0</num>
+         <compatibility>0.90</compatibility>
       </version>
    </versions>
    <langs>
       <lang>en_GB</lang>
-      <lang>fr_FR</lang>
-      ...
+      <lang>...</lang>
    </langs>
    <license>GPL v2+</license>
    <tags>
-      <fr>
-         <tag>tag1</tag>
-      </fr>
       <en>
          <tag>tag1</tag>
       </en>
+      <lang>
+         <tag>tag1</tag>
+      </lang>
    </tags>
    <screenshots>
       <screenshot>http://link/to/your/screenshot</screenshot>
