improve xml example

--- a/frontend/app/views/submit.html
+++ b/frontend/app/views/submit.html
@@ -30,7 +30,7 @@
    <name>Displayed name</name>
    <key>System name</key>
    <state>stable</state>
-   <logo>http://link/to/logo</logo>
+   <logo>http://link/to/logo/with/dimensions/50px/50px</logo>
    <description>
       <short>
          <en>short description of the plugin, displayed on list, text only</en>
