--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -42,7 +42,8 @@
             <md-tabs md-dynamic-height md-selected="selectedIndex">
                 <md-tab ng-repeat="description in plugin.descriptions" label="{{description.lang}}">
                     <md-content class="md-padding description">
-                        <p ng-bind-html="description.long_description | unsafe"></p>
+                        <div btf-markdown="description.long_description">
+                        </div>
                     </md-content>
                 </md-tab>
             </md-tabs>
