--- a/frontend/app/styles/_colors.sass
+++ b/frontend/app/styles/_colors.sass
@@ -9,7 +9,8 @@ $grey:          #949494
 $darkgrey:      #555
 $dark:          #2C2C2C
 $blue:          #3f51b5
-$lightblue:     #8CABDB
+$lightblue:     #C7DBF5
+$verylightblue: #EBF5FF
 $darkblue:      #6F92BA
 $yellow:        #FEC95C
 
