--- a/frontend/app/styles/_sidenav.sass
+++ b/frontend/app/styles/_sidenav.sass
@@ -2,22 +2,28 @@
     position: absolute
     right: 0
     top: 0
+    i 
+    color: $verylightblue
 
-nav
-    padding-top: 24px
-    border-left: 1px solid $verylightgrey
-    font-size: 16px
-    a
-        color: $darkgrey
-        display: block
-        line-height: 1.6
-        padding: 5px 15px
-        margin: 0
-        border-left: 2px solid transparent
-    a.active
-        background-color: $verylightgrey
-        border-left-color: $darkblue
-        color: $black
+.sidebar
+    background-color: $verylightgrey
+    border-left: 1px solid $lightgrey
+    md-sidenav 
+        background-color: inherit
+        nav
+            padding-top: 24px
+            font-size: 16px
+            a
+                color: $darkgrey
+                display: block
+                line-height: 1.6
+                padding: 5px 15px
+                margin: 0
+                border-left: 2px solid transparent
+            a.active
+                background-color: $lightgrey
+                border-left-color: $darkblue
+                color: $black
 
 .lang-switcher
     md-select
