--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -19,7 +19,6 @@ body
     line-height: 1.5em
 
 .main
-    padding: 0 0 50px 15px
     background-color: $white
     min-height: 250px
 
@@ -40,6 +39,8 @@ ul li
 .md-primary
     color: #642626 !important
 
+.submit-button
+    margin-top: 20px
 
 .picbox:after
     font-family: FontAwesome
@@ -73,6 +74,7 @@ ul li
         margin-right: 0
 
 .container
+    padding: 30px 0 50px 15px
     div[layout=row]
         md-content:nth-child(2)
             background-color: $verylightgrey
