refactored a bit urls
 + / is now 'featured' (and not called 'home' anymore)
 + /authors is a list of authors
 + in 'featured' page 'Authors' is a link

--- a/frontend/app/styles/_home_plugin_list.sass
+++ b/frontend/app/styles/_home_plugin_list.sass
@@ -9,6 +9,10 @@
             padding: 0
         i
             font-size: 0.7em
+        a
+            color: inherit
+            &:hover
+                text-decoration: underline
     .legend
         margin-bottom: 15px
         display: inline-block
