--- a/frontend/app/views/featured.html
+++ b/frontend/app/views/featured.html
@@ -88,7 +88,7 @@
    <md-content flex="33" flex-md="50" flex-sm="100">
       <md-list class="plugin-list">
          <md-subheader class='topic'>
-            {{'AUTHORS'|translate}}
+            <a ui-sref="authors">{{'AUTHORS'|translate}}</a>
             <i class="fa fa-user yellow"></i>
          </md-subheader>
          <span class='legend'>{{'AUTHORS_SUB'|translate}}</span>
