added #/tags state , with a link to that state in the featured state

--- a/frontend/app/views/featured.html
+++ b/frontend/app/views/featured.html
@@ -72,7 +72,7 @@
    <md-content flex="33" flex-md="50" flex-sm="100">
       <md-list class="plugin-list">
          <md-subheader class='topic'>
-            {{'TAGS'|translate}}
+            <a ui-sref="tags">{{'TAGS'|translate}}</a>
             <i class="fa fa-tags"></i>
          </md-subheader>
          <span class='legend'>{{'TAGS_SUB'|translate}}</span>
