--- a/frontend/app/views/tags.html
+++ b/frontend/app/views/tags.html
@@ -1,7 +1,14 @@
 <div layout="column">
-	<h2>{{'TAGS'|translate}}</h2>
 
-	<ul ng-repeat="tag in tags">
-		<li><a ui-sref="tag({key: tag.key})">{{tag.tag}}</a></li>
-	</ul>
+  <md-list class="plugin-list">
+     <md-subheader class='topic'>
+        {{'TAGS'|translate}}
+     </md-subheader>
+     <md-list-item ng-repeat="tag in tags">
+        <md-button ui-sref="tag({key: tag.key})">
+           <h4>{{tag.tag}}</h4>
+           <md-tooltip md-direction="right">Tagged on {{tag.plugin_count}} plugins</md-tooltip>
+        </md-button>
+     </md-list-item>
+  </md-list>
 </div>
