added some margin after #/authors and #/tags h2

--- a/frontend/app/styles/_home_plugin_list.sass
+++ b/frontend/app/styles/_home_plugin_list.sass
@@ -5,6 +5,8 @@
     margin-bottom: 30px
     .topic
         font-size: 2em
+        &.margin
+            margin-bottom: 10px
         .md-subheader-inner
             padding: 0
         i
