--- a/frontend/app/views/authors.html
+++ b/frontend/app/views/authors.html
@@ -1,6 +1,6 @@
-<div layout="column">
+<div layout="column" class="authors">
   <md-list class="plugin-list">
-     <md-subheader class='topic'>
+     <md-subheader class='topic margin'>
         <a ui-sref="authors">{{'AUTHORS'|translate}}</a>
      </md-subheader>
      <md-list-item ng-repeat="author in authors">
