--- a/frontend/app/views/tags.html
+++ b/frontend/app/views/tags.html
@@ -1,7 +1,6 @@
 <div layout="column">
-
   <md-list class="plugin-list">
-     <md-subheader class='topic'>
+     <md-subheader class='topic margin'>
         {{'TAGS'|translate}}
      </md-subheader>
      <md-list-item ng-repeat="tag in tags">
