rationnalise css names
add missing file in previous commit

--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -6,7 +6,7 @@
 @import 'ratebox'
 @import 'header'
 @import 'sidenav'
-@import 'home_plugin_list'
+@import 'compact_list'
 @import 'plugin_list'
 @import 'plugin'
 @import 'contact'
