--- a/frontend/app/views/authors.html
+++ b/frontend/app/views/authors.html
@@ -1,5 +1,5 @@
 <div layout="column" class="authors">
-  <md-list class="plugin-list">
+  <md-list class="compact-list">
      <md-subheader class='topic margin'>
         <a ui-sref="authors">{{'AUTHORS'|translate}}</a>
      </md-subheader>
