--- a/frontend/app/views/featured.html
+++ b/frontend/app/views/featured.html
@@ -1,6 +1,6 @@
 <div layout="row" layout-wrap>
    <md-content flex="33" flex-md="50" flex-sm="100">
-      <md-list class="plugin-list">
+      <md-list class="compact-list">
          <md-subheader class='topic'>
             {{'TRENDING' | translate}}
             <i class="fa fa-fire red"></i>
@@ -18,7 +18,7 @@
    </md-content>
 
    <md-content flex="33" flex-md="50" flex-sm="100">
-      <md-list class="plugin-list">
+      <md-list class="compact-list">
          <md-subheader class='topic'>
             {{'NEW'|translate}}
             <i class="fa fa-plus darkblue"></i>
@@ -36,7 +36,7 @@
    </md-content>
 
    <md-content flex="33" flex-md="50" flex-sm="100">
-      <md-list class="plugin-list">
+      <md-list class="compact-list">
          <md-subheader class='topic'>
             {{'POPULAR'|translate}}
             <i class="fa fa-trophy teal"></i>
@@ -54,7 +54,7 @@
    </md-content>
 
    <md-content flex="33" flex-md="50" flex-sm="100">
-      <md-list class="plugin-list">
+      <md-list class="compact-list">
          <md-subheader class='topic'>
             {{'UPDATED'|translate}}
             <i class="fa fa-refresh green"></i>
@@ -70,7 +70,7 @@
    </md-content>
 
    <md-content flex="33" flex-md="50" flex-sm="100">
-      <md-list class="plugin-list">
+      <md-list class="compact-list">
          <md-subheader class='topic'>
             <a ui-sref="tags">{{'TAGS'|translate}}</a>
             <i class="fa fa-tags"></i>
@@ -86,7 +86,7 @@
    </md-content>
 
    <md-content flex="33" flex-md="50" flex-sm="100">
-      <md-list class="plugin-list">
+      <md-list class="compact-list">
          <md-subheader class='topic'>
             <a ui-sref="authors">{{'AUTHORS'|translate}}</a>
             <i class="fa fa-user yellow"></i>
