--- a/frontend/app/views/tags.html
+++ b/frontend/app/views/tags.html
@@ -1,5 +1,5 @@
 <div layout="column">
-  <md-list class="plugin-list">
+  <md-list class="compact-list">
      <md-subheader class='topic margin'>
         {{'TAGS'|translate}}
      </md-subheader>
