--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -7,7 +7,7 @@
 @import 'header'
 @import 'sidenav'
 @import 'compact_list'
-@import 'plugin_list'
+@import 'results_list'
 @import 'plugin'
 @import 'contact'
 @import 'submit_plugin'
