--- a/frontend/app/views/tags.html
+++ b/frontend/app/views/tags.html
@@ -1,9 +1,9 @@
 <div layout="column">
-  <md-list class="compact-list">
+  <md-list class="compact-list results">
      <md-subheader class='topic margin'>
         {{'TAGS'|translate}}
      </md-subheader>
-     <md-list-item ng-repeat="tag in tags">
+     <md-list-item ng-repeat="tag in tags" class="result">
         <md-button ui-sref="tag({key: tag.key})">
            <h4>{{tag.tag}}</h4>
            <md-tooltip md-direction="right">Tagged on {{tag.plugin_count}} plugins</md-tooltip>
