--- a/frontend/app/views/authors.html
+++ b/frontend/app/views/authors.html
@@ -1,15 +1,13 @@
 <div layout="column" class="authors">
-  <md-list class="compact-list">
-     <md-subheader class='topic margin'>
-        <a ui-sref="authors">{{'AUTHORS'|translate}}</a>
-     </md-subheader>
-     <md-list-item ng-repeat="author in authors" class="result">
-        <md-button ui-sref="author({id: author.id})">
-           <h4>{{author.name}}</h4>
-           <md-tooltip md-direction="right">
-              Contributed to {{author.plugin_count}} plugins
-           </md-tooltip>
-        </md-button>
-     </md-list-item>
-  </md-list>
+   <md-list class="compact-list">
+      <md-subheader class='topic margin'>
+         <a ui-sref="authors">{{'AUTHORS'|translate}}</a>
+      </md-subheader>
+      <md-list-item ng-repeat="author in authors" class="result">
+         <md-button ui-sref="author({id: author.id})">
+            <h4>{{author.name}}</h4>
+            <md-tooltip md-direction="right">Contributed to {{author.plugin_count}} plugins</md-tooltip>
+         </md-button>
+      </md-list-item>
+   </md-list>
 </div>
