reviewed a bit styling of compact-list in result mode

--- a/frontend/app/styles/_results_list.sass
+++ b/frontend/app/styles/_results_list.sass
@@ -4,11 +4,12 @@
    a
       color: $teal
 
-.result
+md-list-item.result
    margin: 0
    padding: 10px
-   &:hover
-      background-color: darken(#fff, 8%)
+   .md-button
+      min-width: 162px
+      margin: 0 20px 0 0
 
 .result:nth-child(even)
-   background-color: $verylightgrey
+   background-color: lighten($lightgrey, 6%)
