fix list style in markdown

--- a/frontend/app/styles/_plugin.sass
+++ b/frontend/app/styles/_plugin.sass
@@ -41,6 +41,9 @@
       background-color: inherit
       .description
          background-color: $verylightgrey
+   .markdown
+      li 
+         list-style-type: inherit
 
    .infos
       overflow: visible
