--- a/frontend/app/styles/_plugin.sass
+++ b/frontend/app/styles/_plugin.sass
@@ -4,10 +4,10 @@
    .plugin_header
       border-bottom: 1px dashed $lightgrey
       padding-bottom: 5px
-      height: 68px
       .pills, rate-box
          height: 100%
          line-height: 68px
+         margin-right: 10px
    .plugin_name
       margin-right: 50px
       display: flex
@@ -17,6 +17,9 @@
    .pills span, .downloads span
       cursor: default
    .download
+      .pill
+         padding: 2px 0 2px 4px
+         margin-right: 0
       i
          line-height: 58px
    .ng-gallery
