--- a/frontend/app/styles/_footer.sass
+++ b/frontend/app/styles/_footer.sass
@@ -4,11 +4,12 @@
    width: 100%
    height: 50px
    background-color: $grey
-   color: $white
    line-height: 50px
    box-shadow: inset 0 6px 12px -8px $dark
    z-index: 1000
    p
-      text-align: center
-      line-height: 16px
-      font-size: 16px
+      text-align: right
+      font-size: 10px
+      margin-right: 10px
+      a
+         color: $white
