last change on css

--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -19,9 +19,8 @@ body
    line-height: 1.5em
 
 .main
-   background-color: $white
    min-height: 250px
-
+   margin-top: 6px
 a
    color: $blue
    text-decoration: none
@@ -66,12 +65,9 @@ ul li
    background-color: $verylightgrey
 
 .icon
-   margin-right: 10px
-   max-width: 50px
-   max-height: 50px
-@media (max-width: 599px)
-   .icon
-      margin-right: 0
+   margin: 3px 3px 0 3px
+   width: 40px
+   height: 40px
 
 .container
    padding: 30px 0 50px 15px
