--- a/frontend/app/views/plugin.html
+++ b/frontend/app/views/plugin.html
@@ -1,6 +1,6 @@
 <div layout="column" class="plugin">
    <div layout="row" layout-wrap layout-align="start start" class="plugin_header">
-      <img class="icon" src="{{plugin.logo_url}}" flex-sm="10" />
+      <img class="icon" src="{{plugin.logo_url}}" />
       <div class='plugin_name' flex-sm="45">
          <h2>{{plugin.name}}</h2>
          <h4 class="inline-authors">
