begun work on that wip

--- a/frontend/app/views/plugin_list.html
+++ b/frontend/app/views/plugin_list.html
@@ -14,6 +14,11 @@
          <a href="" ng-click="orderBy=['downloaded','note'];reverse=true">Popularity</a>
       </p>
    </div>
+   <div class="pagination" layout="row">
+      <md-button ng-click="openPage(page.startIndex)" ng-repeat="page in pages">
+         <h4>{{page.n + 1}}</h4>
+      </md-button>
+   </div>
    <div class="results">
       <div class="result" ng-repeat="plugin in results | orderBy:orderBy:reverse track by $index">
          <div layout="row" layout-wrap layout-align="left end">
