better fix for html minification

--- a/frontend/app/views/submit.html
+++ b/frontend/app/views/submit.html
@@ -13,6 +13,7 @@
 <div class="xml_description">
    <span class="legend">Your XML must be valid and respect this format :</span>
    <div hljs>
+<!-- htmlmin:ignore -->
 <root>
    <name>Displayed name</name>
    <key>System name</key>
@@ -60,5 +61,6 @@
       <screenshot>...</screenshot>
    </screenshots>
 </root>
+<!-- htmlmin:ignore -->
    </div>
 </div>
