tags.js makes use of paginated collection

--- a/frontend/app/styles/_pagination.sass
+++ b/frontend/app/styles/_pagination.sass
@@ -1,4 +1,10 @@
 pagination
    .md-button
       &.active
-         background-color: $lightgrey
+         background-color: #6F92BA
+         color: #fff
+      display: inline-block
+      width: 20px
+      min-width: 30px
+      min-height: 10px
+      line-height: 10px
