changed the blue in title of result list, added left/right margin

--- a/frontend/app/styles/_results_list.sass
+++ b/frontend/app/styles/_results_list.sass
@@ -2,7 +2,8 @@
    font-weight: bold
    font-size: 24px
    a
-      color: $teal
+      color: $blue
+      margin: 0 6px
 
 md-list-item.result
    margin: 0
