reduced space between pagination button

--- a/frontend/app/styles/_pagination.sass
+++ b/frontend/app/styles/_pagination.sass
@@ -1,7 +1,12 @@
 pagination
+   margin: 10px 0
    .md-button
       background-color: lighten(#6F92BA, 18%)
       color: #fff
+      margin: 0 4px 0 0
+      &:last-child
+         margin: 0
+      padding: 0
       &.active
          background-color: #6F92BA
       &:not([disabled]):hover
