displayed current position in pagination

--- a/frontend/app/styles/_pagination.sass
+++ b/frontend/app/styles/_pagination.sass
@@ -16,3 +16,6 @@ pagination
       min-width: 30px
       min-height: 10px
       line-height: 10px
+   .count
+      display: inline-block
+      margin-left: 20px
