--- a/frontend/app/styles/_pagination.sass
+++ b/frontend/app/styles/_pagination.sass
@@ -19,3 +19,7 @@ pagination
    .count
       display: inline-block
       margin-left: 20px
+      span
+         font-weight: bold
+         font-size: 1.1em
+         color: $blue
