added translation strings for authors and tags

--- a/frontend/app/views/tags.html
+++ b/frontend/app/views/tags.html
@@ -7,7 +7,7 @@
          <md-button ui-sref="tag({key: tag.key})">
             <h4>{{tag.tag}}</h4>
          </md-button>
-         <span class="info">Tagged on {{tag.plugin_count}} plugins</span class="info">
+         <span class="info">{{'TAGGED_WITH'|translate}} {{tag.plugin_count}} plugins</span class="info">
       </md-list-item>
    </md-list>
 
