--- a/frontend/app/views/authors.html
+++ b/frontend/app/views/authors.html
@@ -6,7 +6,7 @@
          <md-button ui-sref="author({id: author.id})">
             <h4>{{author.name}}</h4>
          </md-button>
-         <span class="info">Contributed to {{author.plugin_count}} plugins</span class="info">
+         <span class="info">{{'CONTRIBUTED_TO'|translate}} {{author.plugin_count}} plugins</span class="info">
       </md-list-item>
    </md-list>
    <pagination collection="authors"></pagination>
