display position in pagination even in single page

--- a/frontend/app/styles/_pagination.sass
+++ b/frontend/app/styles/_pagination.sass
@@ -1,5 +1,7 @@
 pagination
    margin: 10px 0
+   .buttons
+      display: inline-block
    .md-button
       background-color: lighten(#6F92BA, 18%)
       color: #fff
