--- a/frontend/app/styles/_pagination.sass
+++ b/frontend/app/styles/_pagination.sass
@@ -3,16 +3,18 @@ pagination
    .buttons
       display: inline-block
    .md-button
-      background-color: lighten(#6F92BA, 16%)
+      background-color: lighten(#FFB623, 16%)
       color: #fff
       margin: 0 4px 0 0
+      color: #A77615
+      font-weight: bold
       &:last-child
          margin: 0
       padding: 0
       &.active
-         background-color: #6F92BA
+         background-color: #FFB623
       &:not([disabled]):hover
-         background-color: lighten(#6F92BA, 6%)
+         background-color: lighten(#FFB623, 6%)
       display: inline-block
       width: 20px
       min-width: 30px
@@ -24,4 +26,4 @@ pagination
       span
          font-weight: bold
          font-size: 1.1em
-         color: $blue
+         color: #E19C1C
