exported es.svg to es.jpg in images/ ;used this one

--- a/frontend/app/styles/main.sass
+++ b/frontend/app/styles/main.sass
@@ -81,3 +81,9 @@ ul li
    font-style: italic
    color: $grey
    margin: 0
+
+.flag-es
+   display: inline-block
+   width: 22px
+   height: 22px
+   background: url(../images/flags/es.jpg)
